import React from "react";

import { render, screen, fireEvent } from "@testing-library/react";
import { Provider } from "react-redux";
import { configureStore } from "@reduxjs/toolkit";
import { describe, it, expect, vi, beforeEach } from "vitest";

import CommentCard from "../CommentCard";

// Mock emoji-picker-react
vi.mock("emoji-picker-react", () => ({
  Emoji: ({ unified }: { unified: string }) => (
    <span data-testid={`emoji-${unified}`}>{unified}</span>
  ),
  EmojiStyle: {
    NATIVE: "native",
  },
}));

// Mock ui-shared
vi.mock("@ally-ui-mono/ui-shared/index", () => ({
  CustomImage: ({ src, alt, className }: any) => (
    <img src={src} alt={alt} className={className} data-testid="custom-image" />
  ),
  AutoExpandableTextarea: ({ value, onChange, placeholder, className }: any) => (
    <textarea
      data-testid="reply-textarea"
      value={value}
      onChange={e => onChange(e.target.value)}
      placeholder={placeholder}
      className={className}
    />
  ),
  FEATURE_FLAGS_MAP: {
    PEER_REVIEW_FLAG: true,
  },
}));

// Mock AccountCircle - partially mock to keep other exports
vi.mock("@src/assets", async importOriginal => {
  const actual = await importOriginal<typeof import("@src/assets")>();
  return {
    ...actual,
    AccountCircle: ({ className }: any) => (
      <div data-testid="account-circle" className={className} />
    ),
  };
});

// Mock formatRelativeTime
vi.mock("@utils", () => ({
  formatRelativeTime: (date: string) => "2 hours ago",
}));

// Mock Button component
vi.mock("@components", () => ({
  Button: ({ children, onClick, className, variant }: any) => (
    <button onClick={onClick} className={className} data-testid={`button-${variant}`}>
      {children}
    </button>
  ),
  ReactionSelector: () => <div data-testid="reaction-selector" />,
}));

// Mock API
vi.mock("@api", () => ({
  useAddCommentReactionMutation: () => [vi.fn(), { isLoading: false }],
}));

// Create a mock Redux store
const createMockStore = () => {
  return configureStore({
    reducer: {
      user: () => ({
        user: {
          id: 1,
          name: "Test User",
          profileImageUrl: "https://example.com/test-user.jpg",
        },
      }),
    },
  });
};

describe("CommentCard Component", () => {
  let mockStore: ReturnType<typeof createMockStore>;
  const mockComment = {
    id: 1,
    createdBy: {
      id: 1,
      name: "John Doe",
      profileImage: "https://example.com/profile.jpg",
    },
    createdAt: "2024-01-15T10:00:00Z",
    content: "This is a test comment",
    reactions: {},
    replyCount: 0,
  };

  beforeEach(() => {
    vi.clearAllMocks();
    mockStore = createMockStore();
  });

  const renderWithProvider = (component: React.ReactElement) => {
    return render(<Provider store={mockStore}>{component}</Provider>);
  };

  // --- Snapshot Test ---
  it("should match snapshot when rendered with basic props", () => {
    const { asFragment } = renderWithProvider(<CommentCard comment={mockComment} />);
    expect(asFragment()).toMatchSnapshot();
  });

  it("should match snapshot with all props enabled", () => {
    const commentWithReactions = {
      ...mockComment,
      reactions: { "1f44d": 5, "2764": 3, "1f389": 2 },
      replyCount: 3,
    };
    const { asFragment } = renderWithProvider(
      <CommentCard comment={commentWithReactions} showLike showReply onReplyClick={vi.fn()} />,
    );
    expect(asFragment()).toMatchSnapshot();
  });

  // --- Basic Rendering Tests ---
  describe("Basic Rendering", () => {
    it("should render commenter name", () => {
      renderWithProvider(<CommentCard comment={mockComment} />);
      expect(screen.getByText("John Doe")).toBeInTheDocument();
    });

    it("should render comment content", () => {
      renderWithProvider(<CommentCard comment={mockComment} />);
      expect(screen.getByText("This is a test comment")).toBeInTheDocument();
    });

    it("should render formatted time", () => {
      renderWithProvider(<CommentCard comment={mockComment} />);
      expect(screen.getByText("2 hours ago")).toBeInTheDocument();
    });

    it("should render profile image when profileImage is provided", () => {
      renderWithProvider(<CommentCard comment={mockComment} />);
      expect(screen.getByTestId("custom-image")).toBeInTheDocument();
      expect(screen.getByTestId("custom-image")).toHaveAttribute(
        "src",
        "https://example.com/profile.jpg",
      );
    });

    it("should render CustomImage with fallback when no profileImage", () => {
      const commentWithoutProfile = {
        ...mockComment,
        createdBy: {
          ...mockComment.createdBy,
          profileImage: null,
        },
      };
      renderWithProvider(<CommentCard comment={commentWithoutProfile} />);
      // CustomImage component handles the fallback internally
      expect(screen.getByTestId("custom-image")).toBeInTheDocument();
    });
  });

  // --- Reply Button Tests ---
  describe("Reply Button", () => {
    it("should show Reply button when showReply is true", () => {
      renderWithProvider(<CommentCard comment={mockComment} showReply />);
      expect(screen.getByText("Reply")).toBeInTheDocument();
    });

    it("should not show Reply button when showReply is false", () => {
      renderWithProvider(<CommentCard comment={mockComment} showReply={false} />);
      expect(screen.queryByText("Reply")).not.toBeInTheDocument();
    });

    it("should not show Reply button by default", () => {
      renderWithProvider(<CommentCard comment={mockComment} />);
      expect(screen.queryByText("Reply")).not.toBeInTheDocument();
    });
  });

  // --- Reactions Tests ---
  describe("Reactions", () => {
    it("should display reactions when showLike is false and reactions exist", () => {
      const commentWithReactions = {
        ...mockComment,
        reactions: { "1f44d": 5, "2764": 3 },
      };
      renderWithProvider(<CommentCard comment={commentWithReactions} showLike={false} />);
      expect(screen.getByTestId("emoji-1f44d")).toBeInTheDocument();
      expect(screen.getByTestId("emoji-2764")).toBeInTheDocument();
    });

    it("should display reaction count", () => {
      const commentWithReactions = {
        ...mockComment,
        reactions: { "1f44d": 5, "2764": 3 },
      };
      renderWithProvider(<CommentCard comment={commentWithReactions} showLike={false} />);
      expect(screen.getByText("2")).toBeInTheDocument(); // Number of unique reactions
    });

    it("should not display reactions when showLike is true", () => {
      const commentWithReactions = {
        ...mockComment,
        reactions: { "1f44d": 5 },
      };
      renderWithProvider(<CommentCard comment={commentWithReactions} showLike />);
      expect(screen.queryByTestId("emoji-1f44d")).not.toBeInTheDocument();
    });

    it("should display maximum 3 reaction emojis", () => {
      const commentWithManyReactions = {
        ...mockComment,
        reactions: { "1f44d": 5, "2764": 3, "1f389": 2, "1f60a": 1 },
      };
      renderWithProvider(<CommentCard comment={commentWithManyReactions} showLike={false} />);
      // Should show only first 3
      expect(screen.getByTestId("emoji-1f44d")).toBeInTheDocument();
      expect(screen.getByTestId("emoji-2764")).toBeInTheDocument();
      expect(screen.getByTestId("emoji-1f389")).toBeInTheDocument();
      expect(screen.queryByTestId("emoji-1f60a")).not.toBeInTheDocument();
    });
  });

  // --- Reply Count Tests ---
  describe("Reply Count", () => {
    it("should show reply count when replyCount is greater than 0", () => {
      const commentWithReplies = {
        ...mockComment,
        replyCount: 5,
      };
      renderWithProvider(<CommentCard comment={commentWithReplies} />);
      expect(screen.getByText("5 replies")).toBeInTheDocument();
    });

    it("should show singular 'reply' when replyCount is 1", () => {
      const commentWithOneReply = {
        ...mockComment,
        replyCount: 1,
      };
      renderWithProvider(<CommentCard comment={commentWithOneReply} />);
      expect(screen.getByText("1 reply")).toBeInTheDocument();
    });

    it("should not show reply count when replyCount is 0", () => {
      renderWithProvider(<CommentCard comment={mockComment} />);
      expect(screen.queryByText(/repl/)).not.toBeInTheDocument();
    });

    it("should call onReplyClick when reply count is clicked", () => {
      const onReplyClick = vi.fn();
      const commentWithReplies = {
        ...mockComment,
        replyCount: 3,
      };
      renderWithProvider(<CommentCard comment={commentWithReplies} onReplyClick={onReplyClick} />);

      const replyCountElement = screen.getByText("3 replies");
      fireEvent.click(replyCountElement);

      expect(onReplyClick).toHaveBeenCalledTimes(1);
    });
  });

  // --- Styling Tests ---
  describe("Styling", () => {
    it("should apply correct class to commenter name", () => {
      renderWithProvider(<CommentCard comment={mockComment} />);
      const nameElement = screen.getByText("John Doe");
      expect(nameElement).toHaveClass("text-[14px]", "font-medium");
    });

    it("should apply correct class to timestamp", () => {
      renderWithProvider(<CommentCard comment={mockComment} />);
      const timestampElement = screen.getByText("2 hours ago");
      expect(timestampElement).toHaveClass("text-[12px]", "text-gray-500");
    });

    it("should apply cursor-pointer to Reply button", () => {
      renderWithProvider(<CommentCard comment={mockComment} showReply />);
      const replyButton = screen.getByText("Reply");
      expect(replyButton).toHaveClass("cursor-pointer");
    });
  });

  // --- Edge Cases ---
  describe("Edge Cases", () => {
    it("should handle empty content", () => {
      const commentWithEmptyContent = {
        ...mockComment,
        content: "",
      };
      renderWithProvider(<CommentCard comment={commentWithEmptyContent} />);
      expect(screen.getByText("John Doe")).toBeInTheDocument();
    });

    it("should handle very long content", () => {
      const longContent = "A".repeat(500);
      const commentWithLongContent = {
        ...mockComment,
        content: longContent,
      };
      renderWithProvider(<CommentCard comment={commentWithLongContent} />);
      expect(screen.getByText(longContent)).toBeInTheDocument();
    });

    it("should handle empty reactions object", () => {
      const commentWithEmptyReactions = {
        ...mockComment,
        reactions: {},
      };
      renderWithProvider(<CommentCard comment={commentWithEmptyReactions} showLike={false} />);
      // Should not throw or show reactions section
      expect(screen.queryByTestId(/emoji-/)).not.toBeInTheDocument();
    });

    it("should handle special characters in content", () => {
      const commentWithSpecialChars = {
        ...mockComment,
        content: "Hello <script>alert('test')</script> & < > \" '",
      };
      renderWithProvider(<CommentCard comment={commentWithSpecialChars} />);
      expect(
        screen.getByText("Hello <script>alert('test')</script> & < > \" '"),
      ).toBeInTheDocument();
    });
  });

  // --- Divider Tests ---
  describe("Dividers", () => {
    it("should show divider between reactions and reply count", () => {
      const commentWithReactionsAndReplies = {
        ...mockComment,
        reactions: { "1f44d": 5 },
        replyCount: 3,
      };
      const { container } = renderWithProvider(
        <CommentCard comment={commentWithReactionsAndReplies} showLike={false} />,
      );
      const dividers = container.querySelectorAll(".bg-\\[\\#D9D9D9\\]");
      expect(dividers.length).toBeGreaterThan(0);
    });

    it("should show divider before Reply button when showReply is true", () => {
      const { container } = renderWithProvider(<CommentCard comment={mockComment} showReply />);
      const dividers = container.querySelectorAll(".bg-\\[\\#D9D9D9\\]");
      expect(dividers.length).toBeGreaterThan(0);
    });
  });

  // --- Reply Input Tests ---
  describe("Reply Input", () => {
    it("should not show reply input by default", () => {
      renderWithProvider(<CommentCard comment={mockComment} showReply />);
      expect(screen.queryByTestId("reply-textarea")).not.toBeInTheDocument();
    });

    it("should show reply textarea when Reply button is clicked", () => {
      renderWithProvider(<CommentCard comment={mockComment} showReply />);
      const replyButton = screen.getByText("Reply");
      fireEvent.click(replyButton);
      expect(screen.getByTestId("reply-textarea")).toBeInTheDocument();
    });

    it("should stop event propagation when Reply is clicked", () => {
      const parentClickHandler = vi.fn();
      renderWithProvider(
        <div onClick={parentClickHandler}>
          <CommentCard comment={mockComment} showReply />
        </div>,
      );

      const replyButton = screen.getByText("Reply");
      fireEvent.click(replyButton);

      expect(parentClickHandler).not.toHaveBeenCalled();
    });

    it("should have correct placeholder on reply textarea", () => {
      renderWithProvider(<CommentCard comment={mockComment} showReply />);
      const replyButton = screen.getByText("Reply");
      fireEvent.click(replyButton);
      expect(screen.getByTestId("reply-textarea")).toHaveAttribute("placeholder", "Add comment");
    });

    it("should update reply textarea value when typing", () => {
      renderWithProvider(<CommentCard comment={mockComment} showReply />);
      const replyButton = screen.getByText("Reply");
      fireEvent.click(replyButton);

      const textarea = screen.getByTestId("reply-textarea");
      fireEvent.change(textarea, { target: { value: "My reply" } });
      expect(textarea).toHaveValue("My reply");
    });

    it("should call onReply when Comment button is clicked with text", () => {
      const onReply = vi.fn();
      renderWithProvider(<CommentCard comment={mockComment} showReply onReply={onReply} />);

      const replyButton = screen.getByText("Reply");
      fireEvent.click(replyButton);

      const textarea = screen.getByTestId("reply-textarea");
      fireEvent.change(textarea, { target: { value: "My reply" } });

      const commentButton = screen.getByTestId("button-primary");
      fireEvent.click(commentButton);

      expect(onReply).toHaveBeenCalledWith("My reply");
    });

    it("should not call onReply when Comment button is clicked with empty text", () => {
      const onReply = vi.fn();
      renderWithProvider(<CommentCard comment={mockComment} showReply onReply={onReply} />);

      const replyButton = screen.getByText("Reply");
      fireEvent.click(replyButton);

      const commentButton = screen.getByTestId("button-primary");
      fireEvent.click(commentButton);

      expect(onReply).not.toHaveBeenCalled();
    });

    it("should not call onReply when Comment button is clicked with whitespace only", () => {
      const onReply = vi.fn();
      renderWithProvider(<CommentCard comment={mockComment} showReply onReply={onReply} />);

      const replyButton = screen.getByText("Reply");
      fireEvent.click(replyButton);

      const textarea = screen.getByTestId("reply-textarea");
      fireEvent.change(textarea, { target: { value: "   " } });

      const commentButton = screen.getByTestId("button-primary");
      fireEvent.click(commentButton);

      expect(onReply).not.toHaveBeenCalled();
    });

    it("should hide reply textarea after successful submission", () => {
      const onReply = vi.fn();
      renderWithProvider(<CommentCard comment={mockComment} showReply onReply={onReply} />);

      const replyButton = screen.getByText("Reply");
      fireEvent.click(replyButton);

      const textarea = screen.getByTestId("reply-textarea");
      fireEvent.change(textarea, { target: { value: "My reply" } });

      const commentButton = screen.getByTestId("button-primary");
      fireEvent.click(commentButton);

      expect(screen.queryByTestId("reply-textarea")).not.toBeInTheDocument();
    });

    it("should clear textarea value after successful submission", () => {
      const onReply = vi.fn();
      renderWithProvider(<CommentCard comment={mockComment} showReply onReply={onReply} />);

      // First submission
      const replyButton = screen.getByText("Reply");
      fireEvent.click(replyButton);

      let textarea = screen.getByTestId("reply-textarea");
      fireEvent.change(textarea, { target: { value: "My reply" } });

      const commentButton = screen.getByTestId("button-primary");
      fireEvent.click(commentButton);

      // Re-open textarea
      fireEvent.click(replyButton);
      textarea = screen.getByTestId("reply-textarea");
      expect(textarea).toHaveValue("");
    });

    it("should hide reply textarea when Cancel button is clicked", () => {
      renderWithProvider(<CommentCard comment={mockComment} showReply />);

      const replyButton = screen.getByText("Reply");
      fireEvent.click(replyButton);

      const cancelButton = screen.getByTestId("button-secondary");
      fireEvent.click(cancelButton);

      expect(screen.queryByTestId("reply-textarea")).not.toBeInTheDocument();
    });

    it("should clear textarea value when Cancel button is clicked", () => {
      renderWithProvider(<CommentCard comment={mockComment} showReply />);

      const replyButton = screen.getByText("Reply");
      fireEvent.click(replyButton);

      let textarea = screen.getByTestId("reply-textarea");
      fireEvent.change(textarea, { target: { value: "Draft reply" } });

      const cancelButton = screen.getByTestId("button-secondary");
      fireEvent.click(cancelButton);

      // Re-open textarea
      fireEvent.click(replyButton);
      textarea = screen.getByTestId("reply-textarea");
      expect(textarea).toHaveValue("");
    });

    it("should not show reply textarea without showReply prop", () => {
      renderWithProvider(<CommentCard comment={mockComment} />);
      // Reply button should not exist, so textarea cannot be shown
      expect(screen.queryByText("Reply")).not.toBeInTheDocument();
      expect(screen.queryByTestId("reply-textarea")).not.toBeInTheDocument();
    });

    it("should handle special characters in reply", () => {
      const onReply = vi.fn();
      renderWithProvider(<CommentCard comment={mockComment} showReply onReply={onReply} />);

      const replyButton = screen.getByText("Reply");
      fireEvent.click(replyButton);

      const textarea = screen.getByTestId("reply-textarea");
      fireEvent.change(textarea, { target: { value: "<script>alert('xss')</script>" } });

      const commentButton = screen.getByTestId("button-primary");
      fireEvent.click(commentButton);

      expect(onReply).toHaveBeenCalledWith("<script>alert('xss')</script>");
    });

    it("should handle emojis in reply", () => {
      const onReply = vi.fn();
      renderWithProvider(<CommentCard comment={mockComment} showReply onReply={onReply} />);

      const replyButton = screen.getByText("Reply");
      fireEvent.click(replyButton);

      const textarea = screen.getByTestId("reply-textarea");
      fireEvent.change(textarea, { target: { value: "Great work! 👍🎉" } });

      const commentButton = screen.getByTestId("button-primary");
      fireEvent.click(commentButton);

      expect(onReply).toHaveBeenCalledWith("Great work! 👍🎉");
    });
  });
});
